--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
         <calculator>
             <top>
                 <div class="mode"><img src="images/light.png" alt=""></div>
-                <p></p>
-                <h1></h1>
+                <div class="calc">
+                    <p></p>
+                    <h1></h1>
+                </div>
             </top>
             <bottom>
-                <button class="green">C</button>
+                <button class="green">AC</button>
                 <button><img src="images/clear.png" alt="" height="32px" width="30px"></button>
                 <button class="green">%</button>
                 <button class="orange">/</button>
